Update travis config to point to Cython at 0.27rc1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ before_install:
       pip install coverage;
       pip install coveralls codecov;
       fi
-    - pip install https://github.com/cython/cython/archive/3134ec551ae09b880d71999f16f035683b47a8dc.zip --install-option=--no-cython-compile
+    - pip install https://github.com/cython/cython/archive/0.27rc1.zip --install-option=--no-cython-compile
 
 # command to install dependencies
 # e.g. pip install -r requirements.txt # --use-mirrors
