--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ before_install:
       pip install coverage;
       pip install coveralls codecov;
       fi
-    - pip install https://github.com/cython/cython/archive/0.27rc1.zip --install-option=--no-cython-compile
+    - pip install https://github.com/cython/cython/archive/cc0273c1eb343283f0cc8d6cf3b6a31763a7ef87.zip --install-option=--no-cython-compile
 
 # command to install dependencies
 # e.g. pip install -r requirements.txt # --use-mirrors
